--- a/src/styles/pages/Download.module.scss
+++ b/src/styles/pages/Download.module.scss
@@ -249,3 +249,27 @@
     }
   }
 }
+
+.loadingState {
+  @include flex-center;
+  min-height: 50vh;
+  text-align: center;
+  
+  h1 {
+    font-size: $font-size-2xl;
+    color: $light-text-color;
+    animation: pulse 1.5s ease-in-out infinite;
+  }
+}
+
+@keyframes pulse {
+  0% {
+    opacity: 0.6;
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0.6;
+  }
+}
